Merapikan Semua layout

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">laundry</string>
-    <string name="card_pelanggan_id">Customer ID</string>
-    <string name="card_pelanggan_nama">Customer Name</string>
-    <string name="card_pelanggan_nohp">No HandPhone</string>
-    <string name="card_pelanggan_terdaftar">"Registered "</string>
-    <string name="card_pelanggan_alamat">Address</string>
+    <string name="card_pelanggan_id">Customer ID :</string>
+    <string name="card_pelanggan_nama">"Customer Name "</string>
+    <string name="card_pelanggan_nohp">No HandPhone :</string>
+    <string name="card_pelanggan_terdaftar">Registered :</string>
+    <string name="card_pelanggan_alamat">Address :</string>
     <string name="card_pelanggan_hubungi">Contact</string>
     <string name="card_pelanggan_lihat">See</string>
-    <string name="card_pegawai_cabang">Branch</string>
-    <string name="card_pegawai_id">Employee ID</string>
-    <string name="card_pegawai_nama">Employee Name</string>
+    <string name="card_pegawai_cabang">Branch :</string>
+    <string name="card_pegawai_id">Employee ID :</string>
+    <string name="card_pegawai_nama">"Employee Name "</string>
     <string name="card_tambah_pelanggan">"ADD CUSTOMERS "</string>
-    <string name="card_tambah_nama">Name</string>
+    <string name="card_tambah_nama">"Name "</string>
     <string name="card_tambah_namalengkap">Full Name</string>
     <string name="card_tambah_nohp_aktif">Active No HP</string>
     <string name="card_nama_cabang">Branch Name</string>
     <string name="card_simpan">Save</string>
     <string name="card_tambah_pegawai">ADD EMPLOYEE</string>
-    <string name="card_layanan_id">"Service ID "</string>
-    <string name="card_layanan_nama">"Service Name "</string>
-    <string name="card_layanan_harga">Price</string>
+    <string name="card_layanan_id">Service ID :</string>
+    <string name="card_layanan_nama">Service Name :</string>
+    <string name="card_layanan_harga">Price :</string>
     <string name="card_tambah_layanan">"ADD SERVICES "</string>
-    <string name="card_pegawai_terdaftar">Registered</string>
+    <string name="card_pegawai_terdaftar">Registered :</string>
     <string name="validasi_nama_pelanggan">"Name cannot be empty "</string>
     <string name="validasi_alamat_pelanggan">"The address cannot be empty "</string>
     <string name="validasi_noHP_pelanggan">"The cellphone number cannot be empty "</string>
     <string name="validasi_cabang_pelanggan">"Branches cannot be empty "</string>
     <string name="tambah_pelanggan_sukses">"Add customer successfully "</string>
     <string name="tambah_pelanggan_gagal">"Add customer failed "</string>
-    <string name="card_pegawai_nohp">No Handphone</string>
+    <string name="card_pegawai_nohp">No Handphone :</string>
     <string name="card_pegawai_hubungi">Contact</string>
     <string name="card_pegawai_lihat">See</string>
-    <string name="card_pegawai_alamat">Address</string>
-    <string name="card_tambah_alamat">Address</string>
+    <string name="card_pegawai_alamat">Address :</string>
+    <string name="card_tambah_alamat">Address :</string>
     <string name="card_tambah_cabang">Branch Name</string>
     <string name="card_pegawai_simpan">Save</string>
     <string name="card_pelanggan_simpan">Save</string>
-    <string name="card_layanan_cabang">Branch</string>
-    <string name="validasi_nama_pegawai">Imployee Name</string>
-    <string name="validasi_alamat_pegawai">Imployee Address</string>
-    <string name="validasi_nohp_pegawai">No HandPhone</string>
-    <string name="validasi_terdaftar_pegawai">Registered</string>
-    <string name="validasi_namacabang_pegawai">Branch Name</string>
+    <string name="card_layanan_cabang">Branch :</string>
+    <string name="validasi_nama_pegawai">"Imployee Name "</string>
+    <string name="validasi_alamat_pegawai">"Imployee Address "</string>
+    <string name="validasi_nohp_pegawai">"No HandPhone "</string>
+    <string name="validasi_terdaftar_pegawai">"Registered "</string>
+    <string name="validasi_namacabang_pegawai">"Branch Name "</string>
     <string name="sukses_simpan_pegawai">"Add imployee successfully "</string>
     <string name="gagal_simpan_pegawai">"Add imployee failed "</string>
     <string name="validasi_terdaftar_pelanggan">Registered</string>
@@ -261,4 +261,41 @@
     <string name="Ya">Yes</string>
     <string name="Batal">Cancel</string>
     <string name="toast_KonfirmasiLogout">Confirm Log Out</string>
+    <string name="status_belum_dibayar">Unpaid</string>
+    <string name="status_lunas">Paid</string>
+    <string name="tidak_ada_tambahan">No additional services</string>
+    <string name="aksi_bayar">Pay</string>
+    <string name="aksi_diambil">Picked Up</string>
+    <string name="diambil_pada">Picked up on %1$s</string>
+    <string name="pembayaran_berhasil">%1$s payment successful</string>
+    <string name="gagal_update_pembayaran">Failed to update payment status</string>
+    <string name="jam_ambil_disimpan">Pickup time saved: %1$s</string>
+    <string name="gagal_simpan_jam_ambil">Failed to save pickup time</string>
+    <string name="metode_tunai">Cash</string>
+    <string name="metode_qris">QRIS</string>
+    <string name="metode_dana">DANA</string>
+    <string name="metode_gopay">GoPay</string>
+    <string name="metode_ovo">OVO</string>
+    <string name="tvMotivation">Ready to serve customers with sincerity</string>
+    <string name="tvSubText">Don\'t Disappoint Customers</string>
+    <string name="card_edit_profile">Edit Profile</string>
+    <string name="card_edit_nama_profile">Name</string>
+    <string name="card_tambah_nama_profile">Name</string>
+    <string name="card_edit_nohp_profile">No HP</string>
+    <string name="card_tambah_nohp_profile">No HP</string>
+    <string name="card_editBioProfile">Bio</string>
+    <string name="card_tambah_BioProfile">Bio</string>
+    <string name="card_tambah_profile_simpan">Save</string>
+    <string name="card_edit_ppassword">Change Password</string>
+    <string name="card_edit_before_password">Previous Password</string>
+    <string name="card_tambah_before_password">Previous Password</string>
+    <string name="card_edit_after_password">Enter New Password</string>
+    <string name="card_tambah_after_password">New Password</string>
+    <string name="card_password_simpan">Save</string>
+    <string name="SuntingProfil">Edit Profile</string>
+    <string name="ChangePassword">Change Profile</string>
+    <string name="empty_fields_warning">All fields must be filled</string>
+    <string name="user_not_found">User not found, please log in again</string>
+    <string name="profile_saved_success">Profile data saved successfully</string>
+    <string name="profile_saved_failed">Failed to save data</string>
 </resources>
