--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,52 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">laundry</string>
-    <string name="card_pelanggan_id">ID Pelanggan</string>
-    <string name="card_pelanggan_nama">Nama Pelanggan</string>
-    <string name="card_pelanggan_nohp">No Telepon</string>
-    <string name="card_pelanggan_terdaftar">Terdaftar</string>
-    <string name="card_pelanggan_alamat">Alamat</string>
+    <string name="card_pelanggan_id">ID Pelanggan :</string>
+    <string name="card_pelanggan_nama">"Nama Pelanggan "</string>
+    <string name="card_pelanggan_nohp">No Telepon :</string>
+    <string name="card_pelanggan_terdaftar">Terdaftar :</string>
+    <string name="card_pelanggan_alamat">Alamat :</string>
     <string name="card_pelanggan_hubungi">Hubungi</string>
     <string name="card_pelanggan_lihat">Lihat</string>
-    <string name="card_pegawai_cabang">Cabang</string>
-    <string name="card_pegawai_id">ID Pegawai</string>
-    <string name="card_pegawai_nama">Nama Pegawai</string>
+    <string name="card_pegawai_cabang">Cabang :</string>
+    <string name="card_pegawai_id">ID Pegawai :</string>
+    <string name="card_pegawai_nama">"Nama Pegawai "</string>
     <string name="card_tambah_pelanggan">TAMBAH PELANGGAN</string>
-    <string name="card_tambah_nama">Nama</string>
+    <string name="card_tambah_nama">"Nama "</string>
     <string name="card_tambah_namalengkap">Nama Lengkap</string>
-    <string name="card_tambah_nohp_aktif">No HP Aktif</string>
-    <string name="card_nama_cabang">Nama Cabang</string>
+    <string name="card_tambah_nohp_aktif">"No HP Aktif "</string>
+    <string name="card_nama_cabang">"Nama Cabang "</string>
     <string name="card_simpan">Simpan</string>
     <string name="card_tambah_pegawai">" TAMBAH PEGAWAI"</string>
-    <string name="card_layanan_id">ID Layanan</string>
-    <string name="card_layanan_nama">Nama Layanan</string>
-    <string name="card_layanan_harga">Harga</string>
+    <string name="card_layanan_id">ID Layanan :</string>
+    <string name="card_layanan_nama">Nama Layanan :</string>
+    <string name="card_layanan_harga">Harga :</string>
     <string name="card_tambah_layanan">TAMBAH LAYANAN</string>
-    <string name="card_pegawai_terdaftar">Terdaftar</string>
+    <string name="card_pegawai_terdaftar">Terdaftar :</string>
     <string name="validasi_nama_pelanggan">Nama tidak boleh kosong</string>
     <string name="validasi_alamat_pelanggan">Alamat tidak boleh kosong</string>
     <string name="validasi_noHP_pelanggan">No HP tidak boleh kosong</string>
     <string name="validasi_cabang_pelanggan">Cabang tidak boleh kosong</string>
     <string name="tambah_pelanggan_sukses">Tambah pelanggan berhasil</string>
     <string name="tambah_pelanggan_gagal">Tambah pelanggan gagal</string>
-    <string name="card_pegawai_alamat">Alamat</string>
-    <string name="card_pegawai_nohp">No Telepon</string>
+    <string name="card_pegawai_alamat">Alamat :</string>
+    <string name="card_pegawai_nohp">No Telepon :</string>
     <string name="card_pegawai_hubungi">Hubungi</string>
     <string name="card_pegawai_lihat">Lihat</string>
-    <string name="card_tambah_alamat">Alamat</string>
+    <string name="card_tambah_alamat">Alamat :</string>
     <string name="card_tambah_cabang">Nama Cabang</string>
     <string name="card_pegawai_simpan">Simpan</string>
     <string name="card_pelanggan_simpan">Simpan</string>
-    <string name="card_layanan_cabang">Cabang</string>
-    <string name="validasi_nama_pegawai">Nama Pegawai</string>
-    <string name="validasi_alamat_pegawai">Alamat Pegawai</string>
-    <string name="validasi_nohp_pegawai">No Telepon</string>
-    <string name="validasi_terdaftar_pegawai">Terdaftar</string>
-    <string name="validasi_namacabang_pegawai">Nama Cabang</string>
+    <string name="card_layanan_cabang">Cabang :</string>
+    <string name="validasi_nama_pegawai">"Nama Pegawai "</string>
+    <string name="validasi_alamat_pegawai">"Alamat Pegawai "</string>
+    <string name="validasi_nohp_pegawai">"No Telepon "</string>
+    <string name="validasi_terdaftar_pegawai">"Terdaftar "</string>
+    <string name="validasi_namacabang_pegawai">"Nama Cabang "</string>
     <string name="sukses_simpan_pegawai">Tambah pegawai berhasil</string>
     <string name="gagal_simpan_pegawai">Tambah pegawai gagal</string>
-    <string name="validasi_terdaftar_pelanggan">Terdaftar</string>
-    <string name="card_tambah_pelanggan_terdaftar">Terdaftar</string>
+    <string name="validasi_terdaftar_pelanggan">"Terdaftar "</string>
+    <string name="card_tambah_pelanggan_terdaftar">"Terdaftar "</string>
     <string name="card_tambah_pelanggan_nohp_aktif">No HP aktif</string>
     <string name="card_tambah_pelanggan_alamat">Alamat</string>
     <string name="card_tambah_pelanggan_nama">Nama Lengkap</string>
@@ -261,5 +261,41 @@
     <string name="Ya">Ya</string>
     <string name="Batal">Batal</string>
     <string name="toast_KonfirmasiLogout">Konfirmasi Keluar</string>
-
+    <string name="status_belum_dibayar">Belum Dibayar</string>
+    <string name="status_lunas">Lunas</string>
+    <string name="tidak_ada_tambahan">Tidak ada tambahan</string>
+    <string name="aksi_bayar">Bayar</string>
+    <string name="aksi_diambil">Diambil</string>
+    <string name="diambil_pada">Diambil pada %1$s</string>
+    <string name="pembayaran_berhasil">Pembayaran %1$s berhasil</string>
+    <string name="gagal_update_pembayaran">Gagal memperbarui status pembayaran</string>
+    <string name="jam_ambil_disimpan">Jam ambil disimpan: %1$s</string>
+    <string name="gagal_simpan_jam_ambil">Gagal menyimpan jam ambil</string>
+    <string name="metode_tunai">Tunai</string>
+    <string name="metode_qris">QRIS</string>
+    <string name="metode_dana">DANA</string>
+    <string name="metode_gopay">GoPay</string>
+    <string name="metode_ovo">OVO</string>
+    <string name="tvMotivation">Siap melayani pelanggan dengan setulus hati</string>
+    <string name="tvSubText">Jangan Kecewakan Pelanggan</string>
+    <string name="card_edit_profile">Edit Profil</string>
+    <string name="card_edit_nama_profile">Nama</string>
+    <string name="card_tambah_nama_profile">Nama</string>
+    <string name="card_edit_nohp_profile">No HP</string>
+    <string name="card_tambah_nohp_profile">No HP</string>
+    <string name="card_editBioProfile">Bio</string>
+    <string name="card_tambah_BioProfile">Bio</string>
+    <string name="card_tambah_profile_simpan">Simpan</string>
+    <string name="card_tambah_before_password">" Sandi Sebelumnya"</string>
+    <string name="card_edit_after_password">Masukkan Sandi Baru</string>
+    <string name="card_tambah_after_password">" Sandi Baru"</string>
+    <string name="card_password_simpan">Simpan</string>
+    <string name="card_edit_ppassword">Ganti Kata Sandi</string>
+    <string name="card_edit_before_password">Sandi Sebelumnya</string>
+    <string name="SuntingProfil">Edit Profil</string>
+    <string name="ChangePassword">Ganti Kata Sandi</string>
+    <string name="empty_fields_warning">Semua field harus diisi</string>
+    <string name="user_not_found">User tidak ditemukan, silakan login ulang</string>
+    <string name="profile_saved_success">Data profil berhasil disimpan</string>
+    <string name="profile_saved_failed">Gagal menyimpan data</string>
 </resources>
