--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -260,4 +260,41 @@
     <string name="ApakahAndayakininginkeluar">ApakahAndayakininginkeluar</string>
     <string name="Ya">Ya</string>
     <string name="Batal">Batal</string>
+    <string name="status_lunas">status_lunas</string>
+    <string name="tidak_ada_tambahan">tidak_ada_tambahan</string>
+    <string name="aksi_bayar">aksi_bayar</string>
+    <string name="aksi_diambil">aksi_diambil</string>
+    <string name="diambil_pada">diambil_pada</string>
+    <string name="pembayaran_berhasil">pembayaran_berhasil</string>
+    <string name="gagal_update_pembayaran">gagal_update_pembayaran</string>
+    <string name="gagal_simpan_jam_ambil">gagal_simpan_jam_ambil</string>
+    <string name="status_belum_dibayar">status_belum_dibayar</string>
+    <string name="jam_ambil_disimpan">jam_ambil_disimpan</string>
+    <string name="metode_tunai">metode_tunai</string>
+    <string name="metode_qris">metode_qris</string>
+    <string name="metode_dana">metode_dana</string>
+    <string name="metode_gopay">metode_gopay</string>
+    <string name="metode_ovo">metode_ovo</string>
+    <string name="tvMotivation">tvMotivation</string>
+    <string name="tvSubText">tvSubText</string>
+    <string name="card_edit_profile">card_edit_profile</string>
+    <string name="card_edit_nama_profile">card_edit_nama_profile</string>
+    <string name="card_tambah_nama_profile">card_tambah_nama_profile</string>
+    <string name="card_edit_nohp_profile">card_edit_nohp_profile</string>
+    <string name="card_tambah_nohp_profile">card_tambah_nohp_profile</string>
+    <string name="card_editBioProfile">card_editBioProfile</string>
+    <string name="card_tambah_BioProfile">card_tambah_BioProfile</string>
+    <string name="card_tambah_profile_simpan">card_tambah_profile_simpan</string>
+    <string name="card_edit_ppassword">card_edit_ppassword</string>
+    <string name="card_edit_before_password">card_edit_before_password</string>
+    <string name="card_tambah_before_password">card_tambah_before_password</string>
+    <string name="card_edit_after_password">card_edit_after_password</string>
+    <string name="card_tambah_after_password">card_tambah_after_password</string>
+    <string name="card_password_simpan">card_password_simpan</string>
+    <string name="SuntingProfil">SuntingProfil</string>
+    <string name="ChangePassword">ChangePassword</string>
+    <string name="empty_fields_warning">empty_fields_warning</string>
+    <string name="user_not_found">user_not_found</string>
+    <string name="profile_saved_success">profile_saved_success</string>
+    <string name="profile_saved_failed">profile_saved_failed</string>
 </resources>
